fixed fit to screen and button focus on mobile

--- a/index.css
+++ b/index.css
@@ -6,8 +6,9 @@
 
 .app {
     background: #101010;
-    width: 25em;
-    margin: 5em auto;
+    width: 100vw;
+    max-width: 25em;
+    margin: 0 auto;
     overflow: hidden;
     position: relative;
 }
@@ -62,20 +63,38 @@
     outline: unset;
 }
 
-.calculatorControls button:hover {
-    background: #333333;
-}
-
 .calculatorControls button:active {
     transform: translateY(0.5em);
 }
 
-.calculatorControls .sage {
-    background: #9ae681;
+@media (hover: hover) {
+    .calculatorControls button:hover {
+        background-color: #333333;
+    }
+
+    .calculatorControls .sage:hover {
+        background: #c1f0b2;
+    }
+
+    .tabControls button:hover {
+        background: #333333;
+    }
+
+    .settingsControls button:hover {
+        background: #333333;
+    }
+
+    .settingsControls .sage:hover {
+        background: #c1f0b2;
+    }
+
+    .tabControls .sage:hover {
+        background: #c1f0b2;
+    }
 }
 
-.calculatorControls .sage:hover {
-    background: #c1f0b2;
+.calculatorControls .sage {
+    background: #9ae681;
 }
 
 .calculatorControls .insulinBtns {
@@ -159,20 +178,12 @@
     outline: unset;
 }
 
-.settingsControls button:hover {
-    background: #333333;
-}
-
 .settingsControls button:active {
     transform: translateY(0.5em);
 }
 
 .settingsControls .sage {
     background: #9ae681;
-}
-
-.settingsControls .sage:hover {
-    background: #c1f0b2;
 }
 
 .settingsControls .tab .fa-solid {
@@ -201,20 +212,12 @@
     outline: unset;
 }
 
-.tabControls button:hover {
-    background: #333333;
-}
-
 .tabControls button:active {
     transform: translateY(0.5em);
 }
 
 .tabControls .sage {
     background: #9ae681;
-}
-
-.tabControls .sage:hover {
-    background: #c1f0b2;
 }
 
 .tabControls .tab .fa-solid {
